<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/auth_background"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="#000"
                    android:layout_marginBottom="25dp"
                    android:textSize="44dp" />

                <TextView
                    android:id="@+id/test_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF0000"
                    android:textSize="13dp" />

                <EditText
                    android:id="@+id/edit_first_name_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textColorHint="#606060"
                    android:textAlignment="viewStart"
                    android:hint="@string/first_name" />

                <EditText
                    android:id="@+id/edit_last_name_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textColorHint="#606060"
                    android:textAlignment="viewStart"
                    android:hint="@string/last_name" />

                <EditText
                    android:id="@+id/edit_email_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textColorHint="#606060"
                    android:textAlignment="viewStart"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textColorHint="#606060"
                    android:textAlignment="viewStart"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edit_phone_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textColorHint="#606060"
                    android:textAlignment="viewStart"
                    android:hint="@string/phone"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/edit_password_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textColorHint="#606060"
                    android:textAlignment="viewStart"
                    android:hint="@string/pass"
                    android:inputType="textPassword" />

                <ProgressBar
                    android:id="@+id/progress_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_sign_up"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/auth_button"
                    android:textColor="#000"
                    android:text="@string/sign_up"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/toggle_language_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOff="English"
                        android:textOn="عربي" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/have_acc"
                    android:textColor="#000"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/text_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sign_in_txt"
                    android:textColor="#000"
                    android:textSize="15dp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

