<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/auth_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/sign_in"
            android:textColor="#000"
            android:textSize="44dp" />

        <ProgressBar
            android:id="@+id/progress_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start">

            <TextView
                android:id="@+id/text_wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textSize="12dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textColorHint="#606060"
            android:textAlignment="viewStart"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_password_sign_in_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textColorHint="#606060"
            android:textAlignment="viewStart"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/auth_button"
            android:textColor="#000"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/text_forgot_pass"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggle_language_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="English"
                android:textOn="عربي" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up_txt"
            android:textColor="#000"
            android:textSize="15dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>