<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingEnd="5dp">

        <Button
            android:id="@+id/button_close_info"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/close"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="#656464"
        android:layout_margin="5dp"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/text_error_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test"
            android:textSize="22dp"
            android:textColor="#F80000"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progress_home_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_name"
            android:textSize="20dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/text_home_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/members"
            android:textSize="20dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/text_home_members_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:padding="10dp"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stuffs"
            android:textSize="20dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/text_home_stuffs_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:padding="10dp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created"
            android:textSize="20dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/text_home_created_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:padding="10dp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/button_delete_home_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:textSize="18dp"
            android:textColor="#000000"
            android:text="@string/delete"/>

    </LinearLayout>

</LinearLayout>